--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,53 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Constructing partition polytope with n=200 and k=10\n",
-      "Problem size: n = 2000,  m_B = 2020,  m_A = 200\n",
+      "Constructing spindle with dimension n=300, with 600 cone facets,and with 20 pairs of parallel facets\n",
+      "Problem size: n = 300,  m_B = 1240,  m_A = 0\n",
       "Finding feasible solution...\n",
       "Building gurobi model for simplex...\n",
-      "Feasible solution found with objective 104802.0\n",
+      "Feasible solution found with objective 0.0\n",
       "\n",
       "Solving with simplex method...\n",
       "\n",
       "Solution using simplex method:\n",
       "\n",
-      "Optimal objective: 17925.0\n",
-      "Total solve time: 0.03124213218688965\n",
-      "Number of iterations: 2458.0\n",
+      "Optimal objective: -300.070440737206\n",
+      "Total solve time: 4.435770511627197\n",
+      "Number of iterations: 1594.0\n",
       "\n",
       "Solving with steepest descent...\n",
       "Building polyhedral model. Solve method: dual_simplex\n",
       "Changed value of parameter method to 1\n",
       "   Prev: -1  Min: -1  Max: 5  Default: -1\n",
       "Polyhedral model built!\n",
-      "Polyhedral model build time: 2.6868364810943604\n",
-      "Total time for steepest-descent scheme: 1.4215736389160156\n",
+      "Polyhedral model build time: 0.686199426651001\n",
+      "\n",
+      "Iteration 0\n",
+      "Objective: 0.0\n",
+      "Steepness: -3.208198687803844e-05\n",
+      "Step length: 31546.62976337654\n",
+      "\n",
+      "Iteration 50\n",
+      "Objective: -144.40154800117492\n",
+      "Steepness: -2.832771467241828e-05\n",
+      "Step length: 48799.20022996651\n",
+      "\n",
+      "Iteration 100\n",
+      "Objective: -177.2322812402253\n",
+      "Steepness: -2.5625952658930206e-05\n",
+      "Step length: 41552.22148350123\n",
+      "\n",
+      "Iteration 150\n",
+      "Objective: -210.70349080852498\n",
+      "Steepness: -2.281593033332034e-05\n",
+      "Step length: 23396.495016093526\n",
       "\n",
       "Solution for  using steepest-descent augmentation:\n",
-      "\n",
-      "Optimal objective: 17925\n",
-      "Total solve time: 1.4215736389160156\n",
-      "Number of iterations: 94\n",
-      "First simplex iterations 26.0\n",
-      "Average num simplex iterations 11.778947368421052\n",
-      "Total simplex iterations: 1119.0\n",
-      "First solve time 0.015625\n",
-      "Average solve time 0.0013158898604543586\n",
-      "Total solve time: 0.12500953674316406\n",
+      "Problem unsolved\n",
       "\n",
       "\n",
       "Solution for  using simplex method:\n",
       "\n",
-      "Optimal objective: 17925.0\n",
-      "Total solve time: 0.03124213218688965\n",
-      "Number of iterations: 2458.0\n"
+      "Optimal objective: -300.070440737206\n",
+      "Total solve time: 4.435770511627197\n",
+      "Number of iterations: 1594.0\n"
      ]
     }
    ],
@@ -59,7 +69,122 @@
     "\n",
     "from main import main\n",
     "\n",
-    "n = 200\n",
+    "spindle_dim = 300\n",
+    "n_cone_facets = 600\n",
+    "n_parallel_facets = 20\n",
+    "\n",
+    "max_time = 1200\n",
+    "sd_method = 'dual_simplex'\n",
+    "results_dir = 'results_spindle'\n",
+    "    \n",
+    "main(spindle=True, spindle_dim=spindle_dim, n_cone_facets=n_cone_facets, n_parallel_facets=n_parallel_facets,\n",
+    "     results_dir=results_dir, sd_method=sd_method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Constructing partition polytope with n=1500 and k=10\n",
+      "Problem size: n = 15000,  m_B = 15020,  m_A = 1500\n",
+      "Finding feasible solution...\n",
+      "Building gurobi model for simplex...\n",
+      "Feasible solution found with objective 736792.0\n",
+      "\n",
+      "Solving with simplex method...\n",
+      "\n",
+      "Solution using simplex method:\n",
+      "\n",
+      "Optimal objective: 139101.0\n",
+      "Total solve time: 0.4996943473815918\n",
+      "Number of iterations: 4044.0\n",
+      "\n",
+      "Solving with steepest descent...\n",
+      "Building polyhedral model. Solve method: dual_simplex\n",
+      "Changed value of parameter method to 1\n",
+      "   Prev: -1  Min: -1  Max: 5  Default: -1\n",
+      "Polyhedral model built!\n",
+      "Polyhedral model build time: 384.8500454425812\n",
+      "Iteration 0\n",
+      "Objective: 736792\n",
+      "Steepness: -477.9285714285714\n",
+      "Step length: 1\n",
+      "Iteration 50\n",
+      "Objective: 596731\n",
+      "Steepness: -390.0\n",
+      "Step length: 1\n",
+      "Iteration 100\n",
+      "Objective: 485524\n",
+      "Steepness: -341.75\n",
+      "Step length: 1\n",
+      "Iteration 150\n",
+      "Objective: 383633\n",
+      "Steepness: -275.625\n",
+      "Step length: 1\n",
+      "Iteration 200\n",
+      "Objective: 298343\n",
+      "Steepness: -221.25\n",
+      "Step length: 1\n",
+      "Iteration 250\n",
+      "Objective: 229663\n",
+      "Steepness: -174.16666666666666\n",
+      "Step length: 1\n",
+      "Iteration 300\n",
+      "Objective: 187005\n",
+      "Steepness: -124.16666666666667\n",
+      "Step length: 1\n",
+      "Iteration 350\n",
+      "Objective: 155980\n",
+      "Steepness: -64.25\n",
+      "Step length: 1\n",
+      "Iteration 400\n",
+      "Objective: 143128\n",
+      "Steepness: -13.25\n",
+      "Step length: 1\n",
+      "Iteration 450\n",
+      "Objective: 140052\n",
+      "Steepness: -4.375\n",
+      "Step length: 1\n",
+      "Iteration 500\n",
+      "Objective: 139156\n",
+      "Steepness: -1.0\n",
+      "Step length: 1\n",
+      "Total time for steepest-descent scheme: 153.42568588256836\n",
+      "\n",
+      "Solution for  using steepest-descent augmentation:\n",
+      "\n",
+      "Optimal objective: 139101\n",
+      "Total solve time: 153.42568588256836\n",
+      "Number of iterations: 517\n",
+      "First simplex iterations 145.0\n",
+      "Average num simplex iterations 13.5\n",
+      "Total simplex iterations: 6993.0\n",
+      "First solve time 0.20023727416992188\n",
+      "Average solve time 0.04708452850695282\n",
+      "Total solve time: 24.389785766601562\n",
+      "\n",
+      "\n",
+      "Solution for  using simplex method:\n",
+      "\n",
+      "Optimal objective: 139101.0\n",
+      "Total solve time: 0.4996943473815918\n",
+      "Number of iterations: 4044.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import subprocess\n",
+    "\n",
+    "from main import main\n",
+    "\n",
+    "n = 1500\n",
     "k = 10\n",
     "\n",
     "max_time = 1200\n",
@@ -10189,18 +10314,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
