--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Constructing spindle with dimension n=300, with 600 cone facets,and with 20 pairs of parallel facets\n",
-      "Problem size: n = 300,  m_B = 1240,  m_A = 0\n",
+      "Constructing spindle with dimension n=100, with 500 cone facets,and with 0 pairs of parallel facets\n",
+      "Problem size: n = 100,  m_B = 1000,  m_A = 0\n",
       "Finding feasible solution...\n",
       "Building gurobi model for simplex...\n",
       "Feasible solution found with objective 0.0\n",
@@ -19,46 +21,85 @@
       "\n",
       "Solution using simplex method:\n",
       "\n",
-      "Optimal objective: -300.070440737206\n",
-      "Total solve time: 4.435770511627197\n",
-      "Number of iterations: 1594.0\n",
+      "Optimal objective: -100.00000000000004\n",
+      "Total solve time: 0.10935330390930176\n",
+      "Number of iterations: 430.0\n",
       "\n",
       "Solving with steepest descent...\n",
       "Building polyhedral model. Solve method: dual_simplex\n",
       "Changed value of parameter method to 1\n",
       "   Prev: -1  Min: -1  Max: 5  Default: -1\n",
       "Polyhedral model built!\n",
-      "Polyhedral model build time: 0.686199426651001\n",
+      "Polyhedral model build time: 0.07806754112243652\n",
       "\n",
       "Iteration 0\n",
       "Objective: 0.0\n",
-      "Steepness: -3.208198687803844e-05\n",
-      "Step length: 31546.62976337654\n",
+      "Steepness: -3.1396215682741756e-05\n",
+      "Step length: 1170501.4335697526\n",
+      "\n",
+      "Iteration 1\n",
+      "Objective: -36.749315465314375\n",
+      "Steepness: -3.11354382168777e-05\n",
+      "Step length: 58650.152195101866\n",
       "\n",
       "Iteration 50\n",
-      "Objective: -144.40154800117492\n",
-      "Steepness: -2.832771467241828e-05\n",
-      "Step length: 48799.20022996651\n",
+      "Objective: -65.00507843197921\n",
+      "Steepness: -2.4898185246978918e-05\n",
+      "Step length: 7703.796648275232\n",
       "\n",
       "Iteration 100\n",
-      "Objective: -177.2322812402253\n",
-      "Steepness: -2.5625952658930206e-05\n",
-      "Step length: 41552.22148350123\n",
+      "Objective: -81.9196320851616\n",
+      "Steepness: -2.102146003525305e-05\n",
+      "Step length: 11793.438288989882\n",
       "\n",
       "Iteration 150\n",
-      "Objective: -210.70349080852498\n",
-      "Steepness: -2.281593033332034e-05\n",
-      "Step length: 23396.495016093526\n",
+      "Objective: -94.30522423369683\n",
+      "Steepness: -1.9042516316677873e-05\n",
+      "Step length: 1729.162147405856\n",
+      "\n",
+      "Iteration 200\n",
+      "Objective: -98.95028774840924\n",
+      "Steepness: -1.8567196727564286e-05\n",
+      "Step length: 286.38619252645054\n",
+      "\n",
+      "Iteration 250\n",
+      "Objective: -99.93904458307605\n",
+      "Steepness: -1.8311244499379762e-05\n",
+      "Step length: 2.0016920639969737\n",
+      "\n",
+      "Iteration 300\n",
+      "Objective: -99.99999999993678\n",
+      "Steepness: -1.8194028910389774e-05\n",
+      "Step length: 4.663912449161426e-07\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Degenerate step computed. Changing active facets...\n",
+      "Total time for steepest-descent scheme: 20.267246961593628\n",
       "\n",
       "Solution for  using steepest-descent augmentation:\n",
-      "Problem unsolved\n",
+      "\n",
+      "Optimal objective: -99.99999999999714\n",
+      "Total solve time: 20.267246961593628\n",
+      "Number of iterations: 323\n",
+      "First simplex iterations 573.0\n",
+      "Average num simplex iterations 42.77777777777778\n",
+      "Total simplex iterations: 13860.0\n",
+      "First solve time 0.42177772521972656\n",
+      "Average solve time 0.05675641401314441\n",
+      "Total solve time: 18.38907814025879\n",
       "\n",
       "\n",
       "Solution for  using simplex method:\n",
       "\n",
-      "Optimal objective: -300.070440737206\n",
-      "Total solve time: 4.435770511627197\n",
-      "Number of iterations: 1594.0\n"
+      "Optimal objective: -100.00000000000004\n",
+      "Total solve time: 0.10935330390930176\n",
+      "Number of iterations: 430.0\n"
      ]
     }
    ],
@@ -69,9 +110,9 @@
     "\n",
     "from main import main\n",
     "\n",
-    "spindle_dim = 300\n",
-    "n_cone_facets = 600\n",
-    "n_parallel_facets = 20\n",
+    "spindle_dim = 100\n",
+    "n_cone_facets = 500\n",
+    "n_parallel_facets = 0\n",
     "\n",
     "max_time = 1200\n",
     "sd_method = 'dual_simplex'\n",
@@ -10314,6 +10355,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
